--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,9 @@ build:
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
-  build:
+  host:
     - python
+    - pip
   run:
     - python
 
